<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/a"
        android:gravity="center"
        android:background="#DA5F6A"
        android:src="@drawable/wrong_answer"
        android:scaleType="fitCenter"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/text_dialog"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:textSize="18sp"
        android:textColor="#ff000000"
        android:text="@string/wrong_answer"
        android:gravity="center_horizontal"
        android:layout_below="@+id/a"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/btn_ok_dialog"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:background="@color/DeepSkyBlue"
        android:textColor="#ffffffff"
        android:text= "@string/OK"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        android:layout_alignBottom="@+id/text_dialog"
        android:layout_centerHorizontal="true" />

</RelativeLayout>


